--- a/portfolio.html
+++ b/portfolio.html
@@ -45,7 +45,7 @@
                 <span></span>
                 <span></span>
                 <div class="image">
-                    <img src="/Portfolio/imam_img.jpg" alt="Error loding image">
+                    <img src="/Portfolio/sagrika_img.jpg" alt="Error loding image">
                 </div>
             </div>
         </div>
