--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
             <a href="https://www.linkedin.com/in/imamuddinali/"><i class='bx bxl-linkedin'></i></a>
         </div>
         <div class="home-content">
-            <h1>Hi, I'm Imamuddin Ali</h1>
+            <h1>Hi, I'm Sagrika Sinha</h1>
             <h3>Web Developer</h3>
             <p> As a Web developer, you specialize in creating and implementing the websites or applications.
                 This involves working with HTML, CSS, and JavaScript to design and develop the visual elements and
