--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
             <a href="https://mail.google.com/mail/u/0/#inbox/FMfcgzGwJJfrNQtTzDZcKDRgdPtcVqCQ"><i
                     class='bx bxl-facebook'></i></a>
             <a href="#"><i class='bx bxl-twitter'></i></a>
-            <a href="https://www.linkedin.com/in/imamuddinali/"><i class='bx bxl-linkedin'></i></a>
+            <a href="https://www.linkedin.com/in/sagrikasinha/"><i class='bx bxl-linkedin'></i></a>
         </div>
         <div class="home-content">
             <h1>Hi, I'm Sagrika Sinha</h1>
